Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Fri Apr 26 22:25:57 BST 2002	Riley Williams <Riley@Williams.Name>

	* Applied `make lint` to include/arch directory and cleaned up
	  or tagged as acceptable all bugs listed therein under the
	  -strict setting of splint, with the sole exception that in
	  include/arch/system.h the function load_regs is defined with
	  a signle parameter whose type is never declared.
	* Applied `make lint` to include/linuxmt directory and cleaned
	  up or tagged as acceptable all bugs listed therein under the
	  -strict setting of splint, with the exception of those found
	  in include/linuxmt/{mm,tqueue}.h which have still to be done.

Fri Apr 26 20:01:37 BST 2002	Riley Williams <Riley@Williams.Name>

	* Applied `make lint` to include/arch directory.
	* Fixed the bugs found in include/arch/io.h which several other
	  header files import.
	* Discovered that isti() is a reserved name, so changed it to
	  i_sti() throughout the ELKS source tree. Also changed icli()
	  to i_cli() throughout the ELKS source tree for consistency.
	* Fixed all bugs found in include/arch/stat.h with -weak set.
	* Fixed most of the bugs found in include/arch/system.h with the
	  only remaining bug being that the type __ptasks appears never
	  to be defined in the source tree. This is the ONLY remaining
	  bug in this directory as far as `make lint` is concerned.
	* Removed duplicate declaration of get_ss() from header file
	  include/arch/segment.h and added prototypes for declarations.
	* Tweaked machine name for uname such that if CONFIG_286PMODE is
	  defined, we report as a 286 rather than an 8086.
